docs: add post for 2024-09-11-TIL

--- a/_posts/TIL/2024-TIL/2024-09-TIL/2024-09-10-TIL.md
+++ b/_posts/TIL/2024-TIL/2024-09-TIL/2024-09-10-TIL.md
@@ -65,3 +65,4 @@ NGINX를 포함한 프론드엔드와 백엔드 서버를 구성할 때 best pra
 
 - [Frontend Developer Roadmap](https://roadmap.sh/frontend)
 - [Backend Developer Roadmap](https://roadmap.sh/backend)
+- [[장애회고] ORM(JPA) 사용 시 예상치 못한 쿼리로 인한 HikariCP 이슈](https://saramin.github.io/2023-04-27-order-error/)
