docs: update post for reverse proxy

--- a/_posts/TIL/2024-TIL/2024-09-TIL/2024-09-24-2024-09-24-TIL.md
+++ b/_posts/TIL/2024-TIL/2024-09-TIL/2024-09-24-2024-09-24-TIL.md
@@ -2,7 +2,7 @@
 title: 2024-09-24-TIL
 date: 2024-09-24
 categories: [TIL, 2024-TIL]
-tags: [TIL]
+tags: [TIL, Reverse Proxy]
 ---
 
 # 2024-09-24-TIL
